# utreexo

./: go.mod  go.sum
accumulator/: forest.go  forest_test.go  forestdata.go  forestdatacache.go  forestproofs.go  hasher.go  pollard.go  pollard_test.go  printout.txt  transform.go  types.go  undo.go  undo_test.go  utils.go
c/: .gitignore  Anim.hs  DiagramsTree.hs  Forest.hsc  GoImplFunctions.hs  Lib.hs  Main.hs  Makefile  PropertyTests.hs  Remtrans.hs  RemtransTest.hs  Tests.hs  UnitTests.hs  cabal.project  forest.c  forest.h  forest_c_.go  main.c  traceShowM.diff  updateDirt.txt  utreexo.cabal
