cabal-version:       2.2

name:                utreexo
version:             0.1.0.0
author:              Janus Troelsen
maintainer:          ysangkok@gmail.com
build-type:          Simple

common libs
  build-depends:       base >=4.13 && <4.14
                     , wide-word
                     , tasty
                     , tasty-hunit
                     , tasty-hspec
                     , mtl
                     , split
                     , pipes
                     , monad-loops
                     , aeson
                     , aeson-casing
                     , hedgehog
                     , containers
                     , lens
                     , bytestring
                     , binary
                     , base16-bytestring
                     , cryptohash-sha256
                     , zippers
                     , reanimate
                     , reanimate-svg
                     , diagrams-contrib
                     , diagrams-lib
                     , text
  default-language:    Haskell2010
  includes: libutreexo.h
  include-dirs: /home/janus/go/src/github.com/mit-dci/utreexo/c
  extra-libraries: utreexo
  extra-lib-dirs: /home/janus/go/src/github.com/mit-dci/utreexo/c
  ghc-options: -Wall
  ld-options: -Wl,-rpath,/home/janus/go/src/github.com/mit-dci/utreexo/c


executable tests
  import: libs
  main-is:             Tests.hs
  other-modules:       Forest
                       Lib

executable anim
  import: libs
  main-is:             Anim.hs
  other-modules:       Forest
                       Lib
