cabal-version:       2.2

name:                utreexo
version:             0.1.0.0
author:              Janus Troelsen
maintainer:          ysangkok@gmail.com
build-type:          Simple

common libs
  build-depends:       base >=4.13 && <4.15
                     , wide-word
                     , tasty
                     , tasty-hunit
                     , tasty-hspec
                     , mtl
                     , split
                     , pipes
                     , monad-loops
                     , aeson
                     , aeson-casing
                     , hedgehog
                     , containers
                     , lens
                     , bytestring
                     , binary
                     , base16-bytestring
                     , cryptonite
                     , memory
                     , zippers
                     , reanimate
                     , reanimate-svg
                     , diagrams-lib
                     , text
                     , semigroupoids
                     , tree-diff
                     , pretty
  default-language:    Haskell2010
  includes: libutreexo.h
  include-dirs: /home/janus/go/src/github.com/mit-dci/utreexo/c
  extra-libraries: utreexo
  extra-lib-dirs: /home/janus/go/src/github.com/mit-dci/utreexo/c
  ghc-options: -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
  ld-options: -Wl,-rpath,/home/janus/go/src/github.com/mit-dci/utreexo/c


executable tests
  import: libs
  main-is:             Tests.hs
  other-modules:       Forest
                       GoImplFunctions
                       Lib
                       UnitTests
                       PropertyTests

executable anim
  import: libs
  main-is:             Anim.hs
  other-modules:       Forest
                       GoImplFunctions
                       Lib
                       DiagramsTree

executable remtrans
  import: libs
  build-depends: break
               , containers
               , pretty-tree
  main-is:             RemtransTest.hs
  other-modules:       Forest
                       GoImplFunctions
                       Lib
                       Remtrans
                       PropertyTests
